2005-09-14  Brian Cameron <Brian.Cameron@sun.com>

        * gui/gdmsetup.c: Fix gdmsetup so that when
          user modifies Include/Exclude list, it also
          updates automatic/timed login dropdown
          immediately.
	* gui/modules/keymouselistener.c: Remove 
	  incorrect comment.

2005-09-13  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/slave.c, gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c:  Now turn on gesture
	  debug when GDM debug is on.  Fix bug in
	  dwellmouselistener that was causing gestures to 
	  not be recognized.

2005-09-06  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/auth.c, daemon/gdm.c, daemon/slave.c,
	  daemon/verify-pam.c, gui/gdmchooser.c, gui/gdmcomm.c,
	  gui/gdmdynamic.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
	  gui/gdmsetup.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_canvas_item.c, 
	  gui/greeter/greeter_session.c, 
	  gui/modules/keymouselistener.c,
	  utils/gdm-dmx-reconnect-proxy.c,
	  vicious-extensions/vc-misc.c:  Correct memory leaks.
	  Fixes bug #315388, patch by Ray Strode with minor
	  tweaks by myself.
	* gui/gdmphotosetup.c: Corrected definition of void
	  function to avoid compiler warning.

2005-09-06  Brian Cameron <Brian.Cameron@sun.com>

        * Release 2.8.0.4.
        * configure.in, NEWS: Updated.

2005-08-30  Brian Cameron <Brian.Cameron@sun.com>

	* gui/modules/keymouselistener.c, gui/modules/dwellmouselistener.c:
	  Fixed syslog debugging so it works better.

2005-08-20  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmXnestchooser.c: (main):
	* gui/gdmchooser.c: (gdm_chooser_decode_packet), (add_check),
	  (gdm_chooser_add_host), (main):
	* gui/gdmcomm.c: (gdmcomm_check):
	* gui/gdmcommon.h:
	* gui/gdmflexiserver.c: (change_vt), (main):
	* gui/gdmlogin.c: (back_prog_run), (gdm_login_restart_handler),
	  (gdm_login_halt_handler), (gdm_login_suspend_handler),
	  (gdm_login_session_lookup), (gdm_login_language_lookup),
	  (gdm_login_ctrl_handler), (main):