@@ -1,5 +1,17 @@
 2005-09-14  Brian Cameron <Brian.Cameron@sun.com>
 
+	* daemon/gdm.[ch], daemon/slave.c,
+	  config/gdm.conf.in:  Added debug/gestures
+	  key so that you can turn on debugging 
+	  for the gesture listeners separately from
+	  general debug.  Gesture listener debug
+	  output is too verbose to include in
+	  general debug.
+	* docs/C/gdm.xml: Docs had very little information
+	  about debug, so added info.
+
+2005-09-14  Brian Cameron <Brian.Cameron@sun.com>
+
         * gui/gdmsetup.c: Fix gdmsetup so that when
           user modifies Include/Exclude list, it also
           updates automatic/timed login dropdown
